--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind-key -r S-Left swap-window -t -1
 bind-key -r S-Right swap-window -t +1
 
+# synchronize panes
+bind -n C-x setw synchronize-panes
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
