comment to install a brew plugin to support tmux-yank

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ bind -n C-x setw synchronize-panes
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-yank' #`brew install reattach-to-user-namespace` aswell
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
