--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind-key -r S-Left swap-window -t -1
 bind-key -r S-Right swap-window -t +1
 
+#clear pane
+bind -n C-k send-keys -R \; clear-history
+
 # synchronize panes
 bind -n C-x setw synchronize-panes
 
