--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,10 @@ set -g mouse on
 set -g default-terminal "xterm-256color"
 # set -g default-terminal "tmux-256color"
 
+# Pane style
+set -g pane-border-fg yellow
+set -g pane-active-border-fg red
+
 set-option -g bell-action any
 set-option -g visual-bell off
 set-option -g mode-keys vi
