--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/https:/github.com/tpope/vim-fugitive.git"]
 	path = .vim/bundle/https:/github.com/tpope/vim-fugitive.git
 	url = git@github.com:tpope/vim-rails.git
+[submodule "powerline-fonts"]
+	path = powerline-fonts
+	url = git@github.com:powerline/fonts.git
