--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,6 @@
 set -g prefix C-a
 set -g mouse on
 set -g default-terminal "xterm-256color"
-# set -g default-terminal "tmux-256color"
 
 # Pane style
 set -g pane-border-fg yellow
@@ -10,6 +9,7 @@ set -g pane-active-border-fg red
 set-option -g bell-action any
 set-option -g visual-bell off
 set-option -g mode-keys vi
+set-option -g default-shell /usr/local/bin/zsh
 
 # scroll wheel
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
