--- a/tmux.conf
+++ b/tmux.conf
@@ -3,13 +3,13 @@ set -g mouse on
 set -g default-terminal "xterm-256color"
 
 # Pane style
-set -g pane-border-fg yellow
-set -g pane-active-border-fg red
+set -g pane-border-style fg=yellow
+set -g pane-active-border-style fg=red
 
 set-option -g bell-action any
 set-option -g visual-bell off
 set-option -g mode-keys vi
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /opt/homebrew/bin/zsh
 
 # scroll wheel
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
